feat(mages_list) : creation dune vue django pour recuperer les images generer via les machines learning

--- a/core/templates/core/accueil.html
+++ b/core/templates/core/accueil.html
@@ -10,5 +10,6 @@
     <a href="{% url 'recherche' %}">Aller à la page de recherche</a>
     <a href="{% url 'creation_categorie' %}">Créer catégorie</a>
     <a href="{% url 'creation_article' %}">Créer article</a>
+    <a href="{% url 'generated_image_list' %}">images</a>
 </body>
 </html>
