feat(matplotlib) : generation dynamique de graphique avec matplotlib

--- a/core/templates/core/accueil.html
+++ b/core/templates/core/accueil.html
@@ -11,5 +11,6 @@
     <a href="{% url 'creation_categorie' %}">Créer catégorie</a>
     <a href="{% url 'creation_article' %}">Créer article</a>
     <a href="{% url 'generated_image_list' %}">images</a>
+    <a href="{% url 'graphique' %}">Voir le graphique</a>
 </body>
 </html>
