feat: ajout de la base du menu

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,18 +5,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Document</title>
     <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Mono:ital,wght@0,200..800;1,200..800&family=Fascinate+Inline&family=Manrope:wght@200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
 <aside>
+    <div class="application-part">
+        <div class="application-icon"></div>
+        <p class="application-text">Prédicta</p>
+    </div>
     <nav>
         <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/machineLearning">Machine</a></li>
-            <li><a href="/dashboard">Dashboard</a></li>
+            <div class="home-part">
+                <div class="home-icon"></div>
+                <li><a class="text-nav" href="/">Accueil</a></li>
+            </div>
+            <div class="machine-learning-part">
+                <div class="machine-learning-icon"></div>
+                <li><a class="text-nav" href="/machineLearning">Machine Learning</a></li>
+            </div>
+            <div class="dashboard-part">
+                <div class="dashboard-icon"></div>
+                <li><a class="text-nav" href="/dashboard">Dashboard</a></li>
+            </div>
+            <div class="exploration-part">
+                <div class="exploration-icon"></div>
+                <li><a class="text-nav" href="/exploration">Exploration de donnée</a></li>
+            </div>
         </ul>
     </nav>
+    <div class="account-part">
+        <div class="account-icon"></div>
+        <p class="account-text">Invité</p>
+    </div>
 </aside>
-<div>
+<div class="content-wrap">
      {% block content %} {% endblock %}
 </div>
 </body>
