--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,14 +2,134 @@
     margin: 0;
     padding: 0;
     box-sizing: content-box;
-
+    font-size: 1.1rem;
 }
 
 body {
-    display: flex;
     height: 100vh;
+    background-color: #f2f2f2;
 }
+
 aside {
-    background-color: orange;
-    width: 20%;
+    background-color: #161619;
+    width: 17%;
+    position: fixed;
+    top: 1%;
+    bottom: 1%;
+    left: 1%;
+    box-shadow: 1px 50px 50px rgba(0, 0, 0, 0.2);
+    border-radius: 0.8rem;
+    text-align: center;
+}
+
+.content-wrap{
+    width: 80%;
+    height: 800000px;
+    margin-left: auto;
+}
+
+li{
+    list-style-type: none;
+    text-align: start;
+    margin-left: 10px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
+.text-nav,.account-text,.application-text{
+    text-decoration: none;
+    color: white;
+}
+
+.application-text{
+    font-size: 1.5rem;
+    font-family: "Montserrat", sans-serif;
+}
+
+.application-icon{
+    background-image: url(/static/images/application.png);
+}
+
+.account-icon{
+    background-image: url(/static/images/account.png);
+}
+
+.home-icon{
+    background-image: url(/static/images/acceuil.png);
+}
+
+.machine-learning-icon{
+    background-image: url(/static/images/machine-learning.png);
+}
+
+.exploration-icon{
+    background-image: url(/static/images/exploration.png);
+}
+
+.dashboard-icon{
+    background-image: url(/static/images/dashboard.png);
+}
+
+.application-icon{
+    background-size: 100%;
+    width: 80px;
+    height: 80px;
+    background-repeat: no-repeat;
+}
+
+.account-icon, .home-icon, .machine-learning-icon, .exploration-icon, .dashboard-icon{
+    background-size: 100%;
+    width: 50px;
+    height: 50px;
+    background-repeat: no-repeat;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.account-icon{
+    margin-left: 5%;
+}
+
+.application-part{
+    display: flex;
+    align-items: center;
+    gap: 8%;
+    background-color: #1f1f22;
+    border-radius: 0.8rem;
+    padding-left: 5%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    margin-bottom: 5%;
+}
+
+.account-part {
+    position: fixed;
+    bottom: 1%;
+    left: 1%;
+    right: 82%;
+    display: flex;
+    align-items: center;
+    gap: 12%;
+    background-color: #1f1f22;
+    border-radius: 0.8rem;
+    padding: 25px;
+}
+
+.home-part,.machine-learning-part,.dashboard-part,.exploration-part{
+    display: flex;
+    align-items: center;
+    gap: 10%;
+    border-radius: 0.8rem;
+    padding: 5%;
+    margin-left: 5%;
+    margin-right: 5%;
+    height: 30px;
+}
+
+.home-part:hover, .machine-learning-part:hover, .dashboard-part:hover, .exploration-part:hover{
+    background-color: #1f3027;
+}
+
+.home-part:hover .text-nav, .machine-learning-part:hover .text-nav, .dashboard-part:hover .text-nav, .exploration-part:hover .text-nav{
+    color: #118747;
 }
