--- a/templates/base.html
+++ b/templates/base.html
@@ -17,22 +17,22 @@
     </div>
     <nav>
         <ul>
-            <div class="home-part">
+            <li class="home-part">
                 <div class="home-icon"></div>
-                <li><a class="text-nav" href="/">Accueil</a></li>
-            </div>
-            <div class="machine-learning-part">
+                <div><a class="text-nav" href="/">Accueil</a></div>
+            </li>
+            <li class="machine-learning-part">
                 <div class="machine-learning-icon"></div>
-                <li><a class="text-nav" href="/machineLearning">Machine Learning</a></li>
-            </div>
-            <div class="dashboard-part">
+                <div><a class="text-nav" href="/machineLearning">Machine Learning</a></div>
+            </li>
+            <li class="dashboard-part">
                 <div class="dashboard-icon"></div>
-                <li><a class="text-nav" href="/dashboard">Dashboard</a></li>
-            </div>
-            <div class="exploration-part">
+                <div><a class="text-nav" href="/dashboard">Dashboard</a></div>
+            </li>
+            <li class="exploration-part">
                 <div class="exploration-icon"></div>
-                <li><a class="text-nav" href="/exploration">Exploration de donnée</a></li>
-            </div>
+                <div><a class="text-nav" href="/exploration">Exploration de donnée</a></div>
+            </li>
         </ul>
     </nav>
     <div class="account-part">
