fix: css files moved to static in root

--- a/machineLearning/templates/machineLearning/index.html
+++ b/machineLearning/templates/machineLearning/index.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+{% block css %}
+<link rel="stylesheet" href="../static/css/machineLearning/style.css">
+{% endblock %}
 {% block content %}
 <h1>
     JE SUIS UN ELI LA MACHINEEEEE
