--- a/machineLearning/templates/machineLearning/index.html
+++ b/machineLearning/templates/machineLearning/index.html
@@ -3,7 +3,30 @@
 <link rel="stylesheet" href="../static/css/machineLearning/style.css">
 {% endblock %}
 {% block content %}
-<h1>
-    JE SUIS UN ELI LA MACHINEEEEE
-</h1>
+<body>
+    <div class="main-container">
+      <h1 class="main-title">Machine learning</h1>
+  
+      <div class="cards">
+        <div class="card">
+          <img src="/static/images/machineLearning/graphique.png" alt="Statistique 1">
+        </div>
+        <div class="card">
+          <img src="/static/images/machineLearning/stat1.png" alt="Statistique 2">
+        </div>
+        <div class="card">
+          <img src="/static/images/machineLearning/stat2.png" alt="Statistique 3">
+        </div>
+        <div class="card">
+          <img src="/static/images/machineLearning/stat3.png" alt="Statistique 4">
+        </div>
+        <div class="card">
+          <img src="/static/images/machineLearning/stat4.png" alt="Statistique 5">
+        </div>
+        <div class="card">
+          <img src="/static/images/machineLearning/stat5.png" alt="Statistique 6">
+        </div>
+      </div>
+    </div>
+  </body>
 {% endblock %}
