Ajout d'un titre pour chaque carte

--- a/machineLearning/templates/machineLearning/index.html
+++ b/machineLearning/templates/machineLearning/index.html
@@ -9,21 +9,27 @@
   
       <div class="cards">
         <div class="card">
+            <h2>Titre 1</h2>
           <img src="/static/images/machineLearning/graphique.png" alt="Statistique 1">
         </div>
         <div class="card">
+            <h2>Titre 2</h2>
           <img src="/static/images/machineLearning/stat1.png" alt="Statistique 2">
         </div>
         <div class="card">
+            <h2>Titre 3</h2>
           <img src="/static/images/machineLearning/stat2.png" alt="Statistique 3">
         </div>
         <div class="card">
+            <h2>Titre 4</h2>
           <img src="/static/images/machineLearning/stat3.png" alt="Statistique 4">
         </div>
         <div class="card">
+            <h2>Titre 5</h2>
           <img src="/static/images/machineLearning/stat4.png" alt="Statistique 5">
         </div>
         <div class="card">
+            <h2>Titre 6</h2>
           <img src="/static/images/machineLearning/stat5.png" alt="Statistique 6">
         </div>
       </div>
