--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
           <ul>
             <li class="home-part">
               <div class="home-icon"></div>
-              <div><a class="text-nav" href="/">Accueil</a></div>
+              <div><a class="text-nav" href="/">Prédiction</a></div>
             </li>
             <li class="machine-learning-part">
               <div class="machine-learning-icon"></div>
