--- a/prediction/templates/choix/index.html
+++ b/prediction/templates/choix/index.html
@@ -11,7 +11,7 @@
                 <h2 class="title2">Modèle 1</h2>
                 <p>Un modèle qui classe les propositions politiques en trois grandes familles.</p>
                 <div class="btn">
-                    <a href=""><span>J'essaye ce modèle</span></a>
+                    <a href="{% url 'prediction' %}"><span>J'essaye ce modèle</span></a>
                   </div>
             </div>
             <div class="card">
