--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
         <p class="application-text">Prédicta</p>
       </div>
       <div class="wrapper-menu">
-        <nav>
+        <nav class="navigation-wrapper">
           <ul>
             <li class="home-part">
               <div class="home-icon"></div>
