--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,6 +4,9 @@
   box-sizing: content-box;
   font-size: 1.1rem;
   font-family: "Funnel Display", sans-serif;
+  list-style-type: none;
+  text-decoration: none;
+
 }
 
 body {
@@ -30,8 +33,8 @@ aside {
   margin-left: auto;
 }
 
-li {
-  list-style-type: none;
+.navigation-wrapper > ul > li {
+
   margin-left: 10px;
   margin-top: 10px;
   margin-bottom: 20px;
