Réparation bdd fonctionnel

--- a/exploration/templates/exploration/index.html
+++ b/exploration/templates/exploration/index.html
@@ -1,87 +1,83 @@
 {% extends 'base.html' %}
 {% block content %}
+<style>
+    table {
+        width: 100%;
+        border-collapse: collapse;
+    }
 
-<!-- Formulaire afin de filtrer par départements -->
-<form method="GET">
+    th, td {
+        border: 1px solid black;
+        padding: 8px;
+        text-align: left;
+    }
+
+    th {
+        background-color: #f2f2f2;
+        font-weight: bold;
+    }
+</style>
+<form method="get">
     {{ form.as_p }}
-    <button type="submit" class="btn btn-primary">Filtrer</button>
+    <button type="submit">Filtrer</button>
 </form>
 
-<!-- Tableau des données filtrées -->
-<table border="1">
+<table>
     <thead>
         <tr>
-            {% if show_code_du_departement %}<th>Code du département</th>{% endif %}
-            {% if show_libelle_du_departement %}<th>Libellé du département</th>{% endif %}
-            {% if show_code_de_la_circonscription %}<th>Code de la circonscription</th>{% endif %}
-            {% if show_inscrits %}<th>Inscrits</th>{% endif %}
-            {% if show_volants %}<th>Votants</th>{% endif %}
-            {% if show_exprimees %}<th>Exprimés</th>{% endif %}
-            {% if show_blancs_et_nuls %}<th>Blancs et nuls</th>{% endif %}
-            {% if show_nuance %}<th>Nuance</th>{% endif %}
-            {% if show_voix %}<th>Voix</th>{% endif %}
-            {% if show_nuance_2 %}<th>Nuance 2</th>{% endif %}
-            {% if show_voix_2 %}<th>Voix 2</th>{% endif %}
-            {% if show_nuance_3 %}<th>Nuance 3</th>{% endif %}
-            {% if show_voix_3 %}<th>Voix 3</th>{% endif %}
-            {% if show_annee %}<th>Année</th>{% endif %}
-            {% if show_gagnant %}<th>Gagnant</th>{% endif %}
-            {% if show_voix_gagnant %}<th>Voix gagnant</th>{% endif %}
-            {% if show_gagnant_precedent %}<th>Gagnant précédent</th>{% endif %}
-            {% if show_voix_gagnant_precedent %}<th>Voix gagnant précédent</th>{% endif %}
-            {% if show_encodage_sans_centre_gagnant %}<th>Encodage sans centre gagnant</th>{% endif %}
-            {% if show_encodage_avec_centre_gagnant %}<th>Encodage avec centre gagnant</th>{% endif %}
-            {% if show_encodage_centre_extremes_gagnant %}<th>Encodage centre extrêmes gagnant</th>{% endif %}
-            {% if show_encodage_sans_centre_gagnant_precedent %}<th>Encodage sans centre gagnant précédent</th>{% endif %}
-            {% if show_encodage_avec_centre_gagnant_precedent %}<th>Encodage avec centre gagnant précédent</th>{% endif %}
-            {% if show_encodage_centre_extremes_gagnant_precedent %}<th>Encodage centre extrêmes gagnant précédent</th>{% endif %}
-            {% if show_instabilite_sans_centre %}<th>Instabilité sans centre</th>{% endif %}
-            {% if show_poids_nuance_sans_centre %}<th>Poids nuance sans centre</th>{% endif %}
-            {% if show_desir_changement_sans_centre %}<th>Désir de changement sans centre</th>{% endif %}
-            {% if show_instabilite_avec_centre %}<th>Instabilité avec centre</th>{% endif %}
-            {% if show_poids_nuance_avec_centre %}<th>Poids nuance avec centre</th>{% endif %}
-            {% if show_desir_changement_avec_centre %}<th>Désir de changement avec centre</th>{% endif %}
-            {% if show_instabilite_centre_extremes %}<th>Instabilité centre/extrêmes</th>{% endif %}
-            {% if show_poids_nuance_centre_extremes %}<th>Poids nuance centre/extrêmes</th>{% endif %}
-            {% if show_desir_changement_centre_extremes %}<th>Désir changement centre/extrêmes</th>{% endif %}
+            {% if form.show_code_du_departement.value %}<th>Code Département</th>{% endif %}
+            {% if form.show_libelle_du_departement.value %}<th>Libellé Département</th>{% endif %}
+            {% if form.show_code_de_la_circonscription.value %}<th>Code Circonscription</th>{% endif %}
+            {% if form.show_inscrits.value %}<th>Inscrits</th>{% endif %}
+            {% if form.show_votants.value %}<th>Votants</th>{% endif %}
+            {% if form.show_exprimes.value %}<th>Exprimés</th>{% endif %}
+            {% if form.show_blancs_et_nuls.value %}<th>Blancs et Nuls</th>{% endif %}
+            {% if form.show_nuance.value %}<th>Nuance</th>{% endif %}
+            {% if form.show_voix.value %}<th>Voix</th>{% endif %}
+            {% if form.show_nuance_2.value %}<th>Nuance 2</th>{% endif %}
+            {% if form.show_nuance_3.value %}<th>Nuance 3</th>{% endif %}
+            {% if form.show_voix_2.value %}<th>Voix 2</th>{% endif %}
+            {% if form.show_voix_3.value %}<th>Voix 3</th>{% endif %}
+            {% if form.show_annee.value %}<th>Année</th>{% endif %}
+            {% if form.show_gagnant.value %}<th>Gagnant</th>{% endif %}
+            {% if form.show_voix_gagnant.value %}<th>Voix Gagnant</th>{% endif %}
+            {% if form.show_gagnant_precedent.value %}<th>Gagnant Précédent</th>{% endif %}
+            {% if form.show_voix_gagnant_precedent.value %}<th>Voix Gagnant Précédent</th>{% endif %}
+            {% if form.show_encodage_sans_centre_gagnant.value %}<th>Encodage sans Centre Gagnant</th>{% endif %}
+            {% if form.show_encodage_avec_centre_gagnant.value %}<th>Encodage avec Centre Gagnant</th>{% endif %}
+            {% if form.show_encodage_centre_extremes_gagnant.value %}<th>Encodage Centre/Extrêmes Gagnant</th>{% endif %}
+            {% if form.show_encodage_sans_centre_gagnant_precedent.value %}<th>Encodage sans Centre Gagnant Précédent</th>{% endif %}
+            {% if form.show_encodage_avec_centre_gagnant_precedent.value %}<th>Encodage avec Centre Gagnant Précédent</th>{% endif %}
+            {% if form.show_encodage_centre_extremes_gagnant_precedent.value %}<th>Encodage Centre/Extrêmes Gagnant Précédent</th>{% endif %}
         </tr>
     </thead>
     <tbody>
         {% for row in data %}
         <tr>
-            {% if show_code_du_departement %}<td>{{ row.0 }}</td>{% endif %}
-            {% if show_libelle_du_departement %}<td>{{ row.1 }}</td>{% endif %}
-            {% if show_code_de_la_circonscription %}<td>{{ row.2 }}</td>{% endif %}
-            {% if show_inscrits %}<td>{{ row.3 }}</td>{% endif %}
-            {% if show_volants %}<td>{{ row.4 }}</td>{% endif %}
-            {% if show_exprimees %}<td>{{ row.5 }}</td>{% endif %}
-            {% if show_blancs_et_nuls %}<td>{{ row.6 }}</td>{% endif %}
-            {% if show_nuance %}<td>{{ row.7 }}</td>{% endif %}
-            {% if show_voix %}<td>{{ row.8 }}</td>{% endif %}
-            {% if show_nuance_2 %}<td>{{ row.9 }}</td>{% endif %}
-            {% if show_voix_2 %}<td>{{ row.10 }}</td>{% endif %}
-            {% if show_nuance_3 %}<td>{{ row.11 }}</td>{% endif %}
-            {% if show_voix_3 %}<td>{{ row.12 }}</td>{% endif %}
-            {% if show_annee %}<td>{{ row.13 }}</td>{% endif %}
-            {% if show_gagnant %}<td>{{ row.14 }}</td>{% endif %}
-            {% if show_voix_gagnant %}<td>{{ row.15 }}</td>{% endif %}
-            {% if show_gagnant_precedent %}<td>{{ row.16 }}</td>{% endif %}
-            {% if show_voix_gagnant_precedent %}<td>{{ row.17 }}</td>{% endif %}
-            {% if show_encodage_sans_centre_gagnant %}<td>{{ row.18 }}</td>{% endif %}
-            {% if show_encodage_avec_centre_gagnant %}<td>{{ row.19 }}</td>{% endif %}
-            {% if show_encodage_centre_extremes_gagnant %}<td>{{ row.20 }}</td>{% endif %}
-            {% if show_encodage_sans_centre_gagnant_precedent %}<td>{{ row.21 }}</td>{% endif %}
-            {% if show_encodage_avec_centre_gagnant_precedent %}<td>{{ row.22 }}</td>{% endif %}
-            {% if show_encodage_centre_extremes_gagnant_precedent %}<td>{{ row.23 }}</td>{% endif %}
-            {% if show_instabilite_sans_centre %}<td>{{ row.24 }}</td>{% endif %}
-            {% if show_poids_nuance_sans_centre %}<td>{{ row.25 }}</td>{% endif %}
-            {% if show_desir_changement_sans_centre %}<td>{{ row.26 }}</td>{% endif %}
-            {% if show_instabilite_avec_centre %}<td>{{ row.27 }}</td>{% endif %}
-            {% if show_poids_nuance_avec_centre %}<td>{{ row.28 }}</td>{% endif %}
-            {% if show_desir_changement_avec_centre %}<td>{{ row.29 }}</td>{% endif %}
-            {% if show_instabilite_centre_extremes %}<td>{{ row.30 }}</td>{% endif %}
-            {% if show_poids_nuance_centre_extremes %}<td>{{ row.31 }}</td>{% endif %}
-            {% if show_desir_changement_centre_extremes %}<td>{{ row.32 }}</td>{% endif %}
+            {% if form.show_code_du_departement.value %}<td>{{ row.code_du_departement }}</td>{% endif %}
+            {% if form.show_libelle_du_departement.value %}<td>{{ row.libelle_du_departement }}</td>{% endif %}
+            {% if form.show_code_de_la_circonscription.value %}<td>{{ row.code_de_la_circonscription }}</td>{% endif %}
+            {% if form.show_inscrits.value %}<td>{{ row.inscrits }}</td>{% endif %}
+            {% if form.show_votants.value %}<td>{{ row.votants }}</td>{% endif %}
+            {% if form.show_exprimes.value %}<td>{{ row.exprimes }}</td>{% endif %}
+            {% if form.show_blancs_et_nuls.value %}<td>{{ row.blancs_et_nuls }}</td>{% endif %}
+            {% if form.show_nuance.value %}<td>{{ row.nuance }}</td>{% endif %}
+            {% if form.show_voix.value %}<td>{{ row.voix }}</td>{% endif %}
+            {% if form.show_nuance_2.value %}<td>{{ row.nuance_2 }}</td>{% endif %}
+            {% if form.show_nuance_3.value %}<td>{{ row.nuance_3 }}</td>{% endif %}
+            {% if form.show_voix_2.value %}<td>{{ row.voix_2 }}</td>{% endif %}
+            {% if form.show_voix_3.value %}<td>{{ row.voix_3 }}</td>{% endif %}
+            {% if form.show_annee.value %}<td>{{ row.annee }}</td>{% endif %}
+            {% if form.show_gagnant.value %}<td>{{ row.gagnant }}</td>{% endif %}
+            {% if form.show_voix_gagnant.value %}<td>{{ row.voix_gagnant }}</td>{% endif %}
+            {% if form.show_gagnant_precedent.value %}<td>{{ row.gagnant_precedent }}</td>{% endif %}
+            {% if form.show_voix_gagnant_precedent.value %}<td>{{ row.voix_gagnant_precedent }}</td>{% endif %}
+            {% if form.show_encodage_sans_centre_gagnant.value %}<td>{{ row.encodage_sans_centre_gagnant }}</td>{% endif %}
+            {% if form.show_encodage_avec_centre_gagnant.value %}<td>{{ row.encodage_avec_centre_gagnant }}</td>{% endif %}
+            {% if form.show_encodage_centre_extremes_gagnant.value %}<td>{{ row.encodage_centre_extremes_gagnant }}</td>{% endif %}
+            {% if form.show_encodage_sans_centre_gagnant_precedent.value %}<td>{{ row.encodage_sans_centre_gagnant_precedent }}</td>{% endif %}
+            {% if form.show_encodage_avec_centre_gagnant_precedent.value %}<td>{{ row.encodage_avec_centre_gagnant_precedent }}</td>{% endif %}
+            {% if form.show_encodage_centre_extremes_gagnant_precedent.value %}<td>{{ row.encodage_centre_extremes_gagnant_precedent }}</td>{% endif %}
         </tr>
         {% endfor %}
     </tbody>
