feat: graphics methos created

--- a/dashboard/templates/dashboard/travail/travail.html
+++ b/dashboard/templates/dashboard/travail/travail.html
@@ -1,4 +1,25 @@
 {% extends '../base/index.html' %}
 {% block stats %}
-<h2>Je suis Travail stat</h2>
+<div class="stat-container">
+<div class="stat-item">
+<img src="data:image/png;base64,{{ unemployed_data }}" alt="Sales dfsfd">
+    <p>Cheumeurs par departament in 2019</p>
+</div>
+<div class="stat-item">
+<img src="data:image/png;base64,{{ taux_chomage }}" alt="Sales dfsfd">
+    <p>Average Taux de chommeurs par departement en 2019</p>
+</div>
+    <div class="stat-item">
+<img src="data:image/png;base64,{{ population }}" alt="Sales dfsfd">
+    <p>population par departement en 2019</p>
+</div>
+    <div class="stat-item">
+<img src="data:image/png;base64,{{ taux_chomage_59 }}" alt="Sales dfsfd">
+    <p>population par departement en 2019</p>
+</div>
+    <div class="stat-item">
+<img src="data:image/png;base64,{{ chomeurs }}" alt="Sales dfsfd">
+    <p>population par departement en 2019</p>
+</div>
+</div>
 {% endblock %}
