--- a/static/css/dashboard/style.css
+++ b/static/css/dashboard/style.css
@@ -42,6 +42,56 @@ h1 {
   left: 0;
   height: 2px;
   width: 100%;
-  background-color: #18be61; /* blue underline */
+  background-color: #18be61;
   border-radius: 1px;
+}
+
+.stat-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 1.5rem;
+    margin-top: 1.5rem;
+}
+
+.stat-container > .stat-item {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+    padding: 20px;
+    align-items: center;
+    justify-content: center;
+
+
+    img {
+        width: 100%;
+    }
+}
+.filter-wrapper {
+    margin-top: 0.5rem;
+    display: flex;
+    gap: 0.6rem;
+font-size: 0.9rem;
+    button {
+        border-radius: 0.4em;
+        padding: 0.2em 0.4em;
+        border: inherit;
+        background-color: #18be61;
+        color: white;
+        cursor: pointer;
+    }
+
+}
+
+.filter-wrapper .select-field {
+
+   border-radius: 0.4em;
+    padding: 0.1em;
+}
+
+
+.filter-wrapper >.icon{
+    width: 1.3rem;
 }
